tdf#66405: imported formulas should have all margins set to 0

Currently, imported formulas use default Math object's margins,
that are 2 mm left & right for embedded object and 1 mm left & right
for its model. Before commit eae2331f83bd58bacccd898d60f6c5f54856c036,
there was also 3.5 mm bottom margin for embedded object.

This commit sets all margins to 0.
Unit test is included.

Change-Id: I23c78d4cedaeba8f2a70a000dca8e31de20bcab2